--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -14,7 +14,8 @@
     "jsx": "preserve",
     "incremental": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
