--- a/thegraph/package.json
+++ b/thegraph/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "stackandrun",
+  "name": "thegraph",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ stackandrun",
-    "create-local": "graph create --node http://localhost:8020/ stackandrun",
-    "remove-local": "graph remove --node http://localhost:8020/ stackandrun",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 stackandrun",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ thegraph",
+    "create-local": "graph create --node http://localhost:8020/ thegraph",
+    "remove-local": "graph remove --node http://localhost:8020/ thegraph",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 thegraph",
     "test": "graph test"
   },
   "dependencies": {
