--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.51.11",
     "@worldcoin/idkit": "^1.3.0",
+    "axios": "^1.7.7",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
