--- a/wordcoin_server/package.json
+++ b/wordcoin_server/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "@worldcoin/idkit": "^1.3.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.3",
     "express": "^4.21.0"
   }
 }
