--- a/thegraph/subgraph.yaml
+++ b/thegraph/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: StakeAndRun
     network: scroll-sepolia
     source:
-      address: "0xc0ce4DaD227603aa1832a9F82Dc1c0CF8C72C178"
+      address: "0xa3757957bdE26F6581b81b0363E00F635628c4E4"
       abi: StakeAndRun
-      startBlock: 6879663
+      startBlock: 6879902
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -30,6 +30,6 @@ dataSources:
           handler: handleDailyRunUploaded
         - event: NewChallenge(uint256,uint256,uint256)
           handler: handleNewChallenge
-        - event: NewUser(uint256,address)
+        - event: NewUser(uint256,address,string)
           handler: handleNewUser
       file: ./src/stake-and-run.ts
